default_deploy_svc.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: default-app-deployment
  namespace: app
  labels:
    app: default-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: default-app
  template:
    metadata:
      labels:
        app: default-app
    spec:
      containers:
      - name: default-app
        image: localhost:5000/echo:1.0
        args:
        - "-port=:2324"

---
kind: Service
apiVersion: v1
metadata:
  name: default-svc
  namespace: app
spec:
  selector:
    app: default-app
  ports:
    - port: 2324
